services/explorer-ui-v2/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer-ui-v2
  labels:
    app: explorer-ui-v2
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-ui-v2
  template:
    metadata:
      labels:
        app: explorer-ui-v2
    spec:
      imagePullSecrets:
        - name: registry-aztlan-containers
      containers:
        - name: explorer-ui-v2
          image: registry.digitalocean.com/aztlan-containers/explorer-ui-v2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 300Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
