services/explorer-ui-v2/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-ui-v2
  labels:
    app: explorer-ui-v2
    app.kubernetes.io/name: explorer-ui-v2
    app.kubernetes.io/part-of: chicmoz-prod
spec:
  type: ClusterIP
  selector:
    app: explorer-ui-v2
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
